// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with /materials/:id route renders correctly 1`] = `
<div
  className="content"
>
  <div>
    <div>
      Material
    </div>
  </div>
</div>
`;

exports[`with root route renders correctly 1`] = `
<div
  className="content"
>
  <div>
    <div>
      Materials
    </div>
  </div>
</div>
`;
